[project]
name = "modern-cinephile-movie-player"
version = "0.1.0"
description = "Never let a good movie get in the way of your doomscrolling..."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe==0.10.18",
    "python-vlc>=3.0.21203",
]

[dependency-groups]
dev = [
    "picamera2>=0.3.34",
]

[[tool.uv.dependency-metadata]]
name = "python-prctl"
version = "1.8.1"
requires-dist = ["picamera2"]